--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,6 +1,13 @@
 name: "API: GitHub Actions Demo"
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [ push ]
+on:
+  push:
+    paths:
+      - api/**
+  pull_request:
+    paths:
+      - api/**
+
 jobs:
   Version:
     runs-on: ubuntu-latest
@@ -31,3 +38,28 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  openapi-compatiable:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out HEAD revision
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+          path: head
+      - name: Check out BASE revision
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.base_ref }}
+          path: base
+      - name: Run OpenAPI Diff (from HEAD revision)
+        uses: LimeFlight/openapi-diff-action@master
+        with:
+          head_spec: head/api/openapi.json
+          base_spec: base/api/openapi.json
+          output_path: ./output
+          github_token: ${{ github.token }}
+      - uses: actions/upload-artifact@v2
+        with:
+          name: diff-reports
+          path: ./output
