--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Lint
         uses: trybeapp/redocly-openapi-cli-github-action@v0.0.1
         with:
-          args: 'lint api/openapi.yml'
+          args: 'lint api/openapi.yaml'
       - name: Bundle
         uses: trybeapp/redocly-openapi-cli-github-action@v0.0.1
         with:
@@ -57,15 +57,18 @@ jobs:
       - name: Build Docs
         uses: trybeapp/redocly-openapi-cli-github-action@v0.0.1
         with:
-          args: 'build-docs ./api/openapi.yaml --disableGoogleFont --output ./api/docs/openapi.html'
+          args: 'build-docs ./api/openapi.yaml  --output ./openapi.html'
       - uses: actions/upload-artifact@v2
         with:
           name: openapi.yaml
           path: ./api/bundle/openapi.yaml
+          if-no-files-found: error
+
       - uses: actions/upload-artifact@v2
         with:
           name: openapi.html
-          path: ./api/docs/openapi.html
+          path: ./openapi.html
+          if-no-files-found: error
   openapi-compatiable:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
