--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Bundle
         uses: seeebiii/redoc-cli-github-action@v10
         with:
-          args: 'bundle --dereferenced ./api/openapi.yaml --output ./api/bundle/openapi.yaml'
+          args: 'bundle ./api/openapi.yaml --dereferenced --output ./api/bundle/openapi.yaml'
       - name: Build Docs
         uses: seeebiii/redoc-cli-github-action@v10
         with:
