--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -46,6 +46,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: 'true'
       - name: Lint
         uses: ./.github/actions/ApiGithubTests
         with:
