--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -71,10 +71,10 @@ jobs:
           path: ./api/bundle/openapi.yaml
           if-no-files-found: error
       - run: echo "${steps.lint.outputs.output}" > ./openapi-linting-report
-        if: failed()
+        if:  ${{ failure() }}
         name: "Persist Linting Report"
       - uses: actions/upload-artifact@v2
-        if: failed()
+        if:  ${{ failure() }}
         with:
           name: report-lint
           path: ./openapi-linting-report
