--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -70,9 +70,12 @@ jobs:
           name: openapi.yaml
           path: ./api/bundle/openapi.yaml
           if-no-files-found: error
-      - run: echo ${{steps.lint.outputs.output}} > ./openapi-linting-report
+      - run: echo ${{steps.lint.outputs.std-out}} > ./openapi-linting-report
         if:  ${{ failure() }}
         name: "Persist Linting Report"
+      - run: echo ${{steps.lint.outputs.std-err}} >> ./openapi-linting-report
+        if: ${{ failure() }}
+        name: "Persist Linting Err Report"
       - uses: actions/upload-artifact@v2
         if:  ${{ failure() }}
         with:
