--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -70,10 +70,12 @@ jobs:
           name: openapi.yaml
           path: ./api/bundle/openapi.yaml
           if-no-files-found: error
-      - run: echo ${{steps.lint.outputs.stdout}} > ./openapi-linting-report
-        if:  ${{ failure() }}
-        name: "Persist Linting Report"
-      - run: echo ${{steps.lint.outputs.stderr}} >> ./openapi-linting-report
+
+      - run: >
+          echo ${{steps.lint.outputs.stdout}} 
+          echo ${{steps.lint.outputs.stderr}} 
+          echo ${{steps.lint.outputs.stdout}} > ./openapi-linting-report
+          echo ${{steps.lint.outputs.stderr}} >> ./openapi-linting-report
         if: ${{ failure() }}
         name: "Persist Linting Err Report"
       - uses: actions/upload-artifact@v2
