--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -109,7 +109,7 @@ jobs:
         id: docs
         uses: ./.github/actions/ApiCustomAction
         with:
-          args: 'build-docs api/openapi.yaml  --output ./api/html/openapi.html'
+          args: 'build-docs api/openapi.yaml -t api/docs/template.hbs  --output ./api/docs/openapi.html'
       - uses: actions/upload-artifact@v2
         with:
           name: openapi.html
