--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -72,7 +72,7 @@ jobs:
                 });             
               console.log(adrs)
               console.log(JSON.stringify(adrs))
-              adrs.forEach( (element)=> {
+              adrs.data.forEach( (element)=> {
                   console.log(element)
                   console.log(JSON.stingify(element))
                   let content =  Buffer.from(element.data.content, 'base64').toString('utf-8')
