--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -74,8 +74,10 @@ jobs:
               console.log(JSON.stringify(adrs))
               adrs.data.forEach( (element)=> {
                   console.log(element)
-                  console.log(JSON.stingify(element))
-                  let content =  Buffer.from(element.data.content, 'base64').toString('utf-8')
+                  console.log(JSON.stringify(element))
+                  let req = await github.rest.request(element.download_url)
+                  let content =  Buffer.from(req.data.content, 'base64').toString('utf-8')
+                  
                   console.log(content)
               })
             } catch (e) {
