--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -79,8 +79,7 @@ jobs:
                   let req = await github.request(element.download_url)
                   console.log(req)
                   console.log(JSON.stringify(req))
-                  let content =  Buffer.from(req.data.content, 'base64').toString('utf-8')
-                  
+                  let content = req.data
                   console.log(content)
               })
             } catch (e) {
